start adding lock turns red functionality

--- a/app_client/dashboard/dashboard.view.css
+++ b/app_client/dashboard/dashboard.view.css
@@ -1,3 +1,15 @@
+#lockIcon {
+  position: absolute;
+  right: 40px;
+  z-index: 0;
+}
+
+#lockIconRed {
+  position: absolute;
+  right: 40px;
+  z-index: 1;
+}
+
 #widgetIcon {
   position: absolute;
   z-index: 0;
