--- a/app_client/dashboard/dashboard.style.css
+++ b/app_client/dashboard/dashboard.style.css
@@ -14,8 +14,10 @@ body {
   position: fixed;
   top: 0;
   right: 0;
+  margin-top: 6px;
   height: 21px;
   width: 100%;
+  z-index: 100;
 }
 
 .tool-icon {
@@ -183,7 +185,7 @@ body {
 .other-button {
   width: 70%;
   text-align: center;
-  margin-top: 100px;
+  margin-top: 5%;
 }
 
 #auth-modal {
