--- a/public/lib/ng-calc/ng-calc.css
+++ b/public/lib/ng-calc/ng-calc.css
@@ -29,20 +29,19 @@
 }
 
 .calculator {
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-	border-radius: 5px;
-	-moz-box-shadow: inset 0px 1px #7b839b;
-	-webkit-box-shadow: inset 0px 1px #7b839b;
-	box-shadow: inset 0px 1px #7b839b;
+	/* -moz-border-radius: 5px; */
+	/* -webkit-border-radius: 5px; */
+	/* border-radius: 5px; */
+	/* -moz-box-shadow: inset 0px 1px #7b839b; */
+	/* -webkit-box-shadow: inset 0px 1px #7b839b; */
+	/* box-shadow: inset 0px 1px #7b839b; */
 	/*background-color: #3C4150;*/
-	background-color: #5F5F5F;
-	border: 1px solid #181A20;
-	float: left;
-	padding: 6px;
+	/* background-color: #5F5F5F; */
+	/* border: 1px solid #181A20; */
+	/* float: left; */
+	/* padding: 6px; */
 	/*width: 184px;*/
 	width: 100%;
-	height: 100%;
 }
 
 .display {
