--- a/public/lib/ng-calc/ng-calc.css
+++ b/public/lib/ng-calc/ng-calc.css
@@ -29,19 +29,20 @@
 }
 
 .calculator {
-	/* -moz-border-radius: 5px; */
-	/* -webkit-border-radius: 5px; */
-	/* border-radius: 5px; */
-	/* -moz-box-shadow: inset 0px 1px #7b839b; */
-	/* -webkit-box-shadow: inset 0px 1px #7b839b; */
-	/* box-shadow: inset 0px 1px #7b839b; */
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	-moz-box-shadow: inset 0px 1px #7b839b;
+	-webkit-box-shadow: inset 0px 1px #7b839b;
+	box-shadow: inset 0px 1px #7b839b;
 	/*background-color: #3C4150;*/
-	/* background-color: #5F5F5F; */
-	/* border: 1px solid #181A20; */
-	/* float: left; */
-	/* padding: 6px; */
+	background-color: #5F5F5F;
+	border: 1px solid #181A20;
+	float: left;
+	padding: 6px;
 	/*width: 184px;*/
 	width: 100%;
+	height: 100%;
 }
 
 .display {
@@ -82,14 +83,14 @@
   min-height: 20px;
 }
 .button {
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
+  /* -moz-border-radius: 3px; */
+  /* -webkit-border-radius: 3px; */
+  /* border-radius: 3px; */
+  /* -webkit-touch-callout: none; */
+  /* -webkit-user-select: none; */
+  /* -khtml-user-select: none; */
+  /* -moz-user-select: none; */
+  /* -ms-user-select: none; */
   user-select: none;
   border: 1px solid #181A20;
   color: #fff;
@@ -99,7 +100,7 @@
   font-size: 12px;
   font-weight: bold;
   /*line-height: 25px;*/
-  line-height: 32px;
+  line-height: 40px;
   padding: 0 8px;
   text-align: center;
   text-decoration: none;
@@ -133,24 +134,24 @@ button::-moz-focus-inner {
   -webkit-box-shadow: inset 0px 1px #9498A3, 0 1px 1px #323643;
   box-shadow: inset 0px 1px #9498A3, 0 1px 1px #323643;
   background-color: #595E6B;
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#656976), to(#4B505E));
-  background-image: -webkit-linear-gradient(top, #656976, #4B505E);
-  background-image: -o-linear-gradient(top, #656976, #4B505E);
-  background-image: linear-gradient(to bottom, #656976, #4B505E);
-  background-image: -moz-linear-gradient(top, #656976, #4B505E);
-  background-repeat: repeat-x;
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff656976', endColorstr='#ff4B505E', GradientType=0);
+  /* background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#656976), to(#4B505E)); */
+  /* background-image: -webkit-linear-gradient(top, #656976, #4B505E); */
+  /* background-image: -o-linear-gradient(top, #656976, #4B505E); */
+  /* background-image: linear-gradient(to bottom, #656976, #4B505E); */
+  /* background-image: -moz-linear-gradient(top, #656976, #4B505E); */
+  /* background-repeat: repeat-x; */
+  /* filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff656976', endColorstr='#ff4B505E', GradientType=0); */
   text-shadow: 0px -1px #181A20;
 }
 .button-gray:hover {
   background-color: #666B78;
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#757985), to(#545867));
-  background-image: -webkit-linear-gradient(top, #757985, #545867);
-  background-image: -o-linear-gradient(top, #757985, #545867);
-  background-image: linear-gradient(to bottom, #757985, #545867);
-  background-image: -moz-linear-gradient(top, #757985, #545867);
-  background-repeat: repeat-x;
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff757985', endColorstr='#ff545867', GradientType=0);
+  /* background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#757985), to(#545867)); */
+  /* background-image: -webkit-linear-gradient(top, #757985, #545867); */
+  /* background-image: -o-linear-gradient(top, #757985, #545867); */
+  /* background-image: linear-gradient(to bottom, #757985, #545867); */
+  /* background-image: -moz-linear-gradient(top, #757985, #545867); */
+  /* background-repeat: repeat-x; */
+  /* filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff757985', endColorstr='#ff545867', GradientType=0); */
 }
 .button-gray.active, 
 .button-gray:active {
@@ -166,22 +167,22 @@ button::-moz-focus-inner {
   -webkit-box-shadow: inset 0px 1px #CA9883, 0 1px 1px #323643;
   box-shadow: inset 0px 1px #CA9883, 0 1px 1px #323643;
   background-color: #965F48;
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#A46E57), to(#844D37));
-  background-image: -webkit-linear-gradient(top, #A46E57, #844D37);
-  background-image: -o-linear-gradient(top, #A46E57, #844D37);
-  background-image: linear-gradient(to bottom, #A46E57, #844D37);
-  background-image: -moz-linear-gradient(top, #A46E57, #844D37);
-  background-repeat: repeat-x;
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffA46E57', endColorstr='#ff844D37', GradientType=0);
+  /* background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#A46E57), to(#844D37)); */
+  /* background-image: -webkit-linear-gradient(top, #A46E57, #844D37); */
+  /* background-image: -o-linear-gradient(top, #A46E57, #844D37); */
+  /* background-image: linear-gradient(to bottom, #A46E57, #844D37); */
+  /* background-image: -moz-linear-gradient(top, #A46E57, #844D37); */
+  /* background-repeat: repeat-x; */
+  /* filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffA46E57', endColorstr='#ff844D37', GradientType=0); */
   text-shadow: 0px -1px #58372A;
 }
 .button-red:hover {
   background-color: #A26B55;
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#B4806A), to(#915740));
-  background-image: -webkit-linear-gradient(top, #B4806A, #915740);
-  background-image: -o-linear-gradient(top, #B4806A, #915740);
-  background-image: linear-gradient(to bottom, #B4806A, #915740);
-  background-image: -moz-linear-gradient(top, #B4806A, #915740);
+  /* background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#B4806A), to(#915740)); */
+  /* background-image: -webkit-linear-gradient(top, #B4806A, #915740); */
+  /* background-image: -o-linear-gradient(top, #B4806A, #915740); */
+  /* background-image: linear-gradient(to bottom, #B4806A, #915740); */
+  /* background-image: -moz-linear-gradient(top, #B4806A, #915740); */
   background-repeat: repeat-x;
   filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffB4806A', endColorstr='#ff915740', GradientType=0);
 }
@@ -199,24 +200,24 @@ button::-moz-focus-inner {
   -webkit-box-shadow: inset 0px 1px #BCD6FF, 0 1px 1px #323643;
   box-shadow: inset 0px 1px #BCD6FF, 0 1px 1px #323643;
   background-color: #598FE9;
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#6DA1F8), to(#427BD8));
-  background-image: -webkit-linear-gradient(top, #6DA1F8, #427BD8);
-  background-image: -o-linear-gradient(top, #6DA1F8, #427BD8);
-  background-image: linear-gradient(to bottom, #6DA1F8, #427BD8);
-  background-image: -moz-linear-gradient(top, #6DA1F8, #427BD8);
-  background-repeat: repeat-x;
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff6DA1F8', endColorstr='#ff427BD8', GradientType=0);
+  /* background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#6DA1F8), to(#427BD8)); */
+  /* background-image: -webkit-linear-gradient(top, #6DA1F8, #427BD8); */
+  /* background-image: -o-linear-gradient(top, #6DA1F8, #427BD8); */
+  /* background-image: linear-gradient(to bottom, #6DA1F8, #427BD8); */
+  /* background-image: -moz-linear-gradient(top, #6DA1F8, #427BD8); */
+  /* background-repeat: repeat-x; */
+  /* filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff6DA1F8', endColorstr='#ff427BD8', GradientType=0); */
   text-shadow: 0px -1px #2C4E88;
 }
 .button-blue:hover {
   background-color: #6E9EED;
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#83B0FC), to(#578ADE));
-  background-image: -webkit-linear-gradient(top, #83B0FC, #578ADE);
-  background-image: -o-linear-gradient(top, #83B0FC, #578ADE);
-  background-image: linear-gradient(to bottom, #83B0FC, #578ADE);
-  background-image: -moz-linear-gradient(top, #83B0FC, #578ADE);
-  background-repeat: repeat-x;
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff83B0FC', endColorstr='#ff578ADE', GradientType=0);
+  /* background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#83B0FC), to(#578ADE)); */
+  /* background-image: -webkit-linear-gradient(top, #83B0FC, #578ADE); */
+  /* background-image: -o-linear-gradient(top, #83B0FC, #578ADE); */
+  /* background-image: linear-gradient(to bottom, #83B0FC, #578ADE); */
+  /* background-image: -moz-linear-gradient(top, #83B0FC, #578ADE); */
+  /* background-repeat: repeat-x; */
+  /* filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff83B0FC', endColorstr='#ff578ADE', GradientType=0); */
 }
 .button-blue.active, 
 .button-blue:active {
