refactor isOperatorKey regex

--- a/public/lib/ng-calc/ng-calc.css
+++ b/public/lib/ng-calc/ng-calc.css
@@ -43,7 +43,10 @@
   background-color: green;
 }
 
-.-key {
-  background-color: green;
+.operator-key {
+  background-color: red;
 }
 
+.special-key {
+  background-color: blue;
+}
