--- a/public/lib/ng-calc/ng-calc.css
+++ b/public/lib/ng-calc/ng-calc.css
@@ -8,7 +8,7 @@
 }
 
 .display {
-  background-color: #fff;
+  background-color: #4c4c4c;
   padding-right: 6px;
   border: 1px solid #181A20;
   text-align: right;
@@ -40,13 +40,13 @@
 }
 
 .digit-key {
-  background-color: green;
+  background-color: #e0e0e0;
 }
 
 .operator-key {
-  background-color: red;
+  background-color: #ff9100;
 }
 
 .special-key {
-  background-color: blue;
+  background-color: #d6d6d6;
 }
