--- a/public/lib/ng-calc/ng-calc.css
+++ b/public/lib/ng-calc/ng-calc.css
@@ -8,6 +8,9 @@
 }
 
 .display {
+  color: white;
+  font-weight: 100;
+  font-size: 100%;
   background-color: #4c4c4c;
   border-radius: 5px 5px 0 0;
   padding-right: 6px;
@@ -19,7 +22,7 @@
 
 .display-text {
   color: #fff;
-  font-size: 22px;
+  font-size: 32px;
   line-height: 42px;
   overflow: hidden;
   unicode-bidi: embed;
