--- a/public/lib/ng-calc/ng-calc.css
+++ b/public/lib/ng-calc/ng-calc.css
@@ -8,23 +8,22 @@
 }
 
 .display {
+  background-color: #4c4c4c;
+  width: 100%; 
+  height: 25%;
+  border-radius: 5px 5px 0 0;
+  border: 1px solid #181A20;
   color: white;
+  text-align: right;
   font-weight: 100;
   font-size: 100%;
-  background-color: #4c4c4c;
-  border-radius: 5px 5px 0 0;
-  padding-right: 6px;
-  border: 1px solid #181A20;
-  text-align: right;
-  height: 25%;
-  width: 100%; 
 }
 
 .display-inner {
   overflow: hidden;
   height: 100%;
+  padding-right: 3%;
   font-size: 22px;
-  min-height: 20px;
 }
 
 .calc-key {
